fixes links on mobile

--- a/style.scss
+++ b/style.scss
@@ -251,7 +251,6 @@ nav {
     }
     @include mobile {
       margin: 0 10px;
-      color: $blue;
     }
   }
 }
